# tinycnn

./: .gitignore  CMakeLists.txt  README.md
doc/: garbage.txt
src/: CMakeLists.txt  alias.h  config.cc  config.h  data.h  error_handler.h  inference.cc  inference.h  layer.h  layer_factory.cc  layer_factory.h  macro.h  param.cc  param.h  tensor.cc  tensor.h
src/algorithm/: math.cc  math.h
src/layer/: CMakeLists.txt  activation.h  base_conv.cc  base_conv.h  batch_norm.cc  batch_norm.h  depthwise_conv.cc  depthwise_conv.h  flatten.cc  flatten.h  input.cc  input.h  maxpool.cc  maxpool.h  neuron_network.h  relu.cc  relu.h  relux.cc  relux.h  softmax.cc  softmax.h  tool.h  util.h
src/test/: base_conv_test.cc  batch_norm_test.cc  max_pool_test.cc  parse_model_test.cc  softmax_test.cc
src/test/python/: create_test_model.py  model.p
src/tools/: CMakeLists.txt  parse_binary.h
