cmake_minimum_required(VERSION 3.1.3)
project(tinycnn)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
SET(CMAKE_BUILD_TYPE "Debug")
SET(CMAKE_CXX_FLAGS_DEBUG "$ENV{CXXFLAGS} -O0 -Wall -g2 -ggdb")
SET(CMAKE_CXX_FLAGS_RELEASE "$ENV{CXXFLAGS} -O3 -Wall")
#include_directories(./src)
add_subdirectory(src)
add_executable(base_conv_test src/test/base_conv_test.cc)
add_executable(parse_binary_txt src/test/parse_model_test.cc)
add_executable(batch_norm_test src/test/batch_norm_test.cc)
add_executable(softmax_test src/test/softmax_test.cc)
add_executable(maxpool_test src/test/max_pool_test.cc)
target_link_libraries(base_conv_test SrcFunctions)
target_link_libraries(parse_binary_txt SrcFunctions)
target_link_libraries(batch_norm_test SrcFunctions)
target_link_libraries(softmax_test SrcFunctions)
target_link_libraries(maxpool_test SrcFunctions)

